# vlog2

./: .gitignore  DESIGN.md  README.md  REFACTOR_PLAN.md  REORGANIZATION.md  WISHLIST.md  build_release.sh  install_model.sh  pyproject.toml  tvas_ui_improvements_todo.md
.github/workflows/: build.yml  publish.yml  test.yml
src/resolve/: import_timeline.py
src/shared/: __init__.py  clip_formatter.py  proxy.py  vlm_client.py
src/shared/prompts/: beat_alignment.txt  outline_generation.txt  video_analysis.txt  video_trim.txt
src/tprs/: cli.py  tprs.py
src/tvas/: __init__.py  analysis.py  beats.py  ingestion.py  main.py  proxy.py  review_ui.py  timeline.py  tprs.py  tprs_cli.py  tprs_ui.py  transcribe.py  trim.py  ui.py  vad.py  vad_utils.py  watcher.py
src/tvas/prompts/: burst_similarity.txt  photo_analysis.txt  subject_sharpness.txt  trim_detection.txt
src/tvas/tools/: __init__.py  timestamp_fixer.py
tests/: conftest.py  test_analysis.py  test_beats.py  test_cli_args.py  test_csv_export.py  test_ingestion.py  test_magic_file.py  test_platform_defaults.py  test_proxy.py  test_special_paths.py  test_timeline.py  test_timestamp_fixer.py  test_tprs.py  test_tprs_ui_exif.py  test_transcribe.py  test_trim.py
